--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta name="author" content="Marat Valeev"/>
 		<title>Document</title>
 		<link href="https://fonts.googleapis.com/css?family=Roboto&subset=cyrillic" rel="stylesheet">
+		<script>/* Metrika */</script>
 	</head>
 	
 	<body>
