Basic Sales version

--- a/sales.html
+++ b/sales.html
@@ -6,8 +6,10 @@
 		<meta name="author" content="Marat Valeev"/>
 		<title>Document</title>
 		<link href="https://fonts.googleapis.com/css?family=Roboto&subset=cyrillic" rel="stylesheet">
+		<script>/* Demo script */</script>
 	</head>
 	
 	<body>
+		<h1>Sales</h1>
 	</body>
 </html>
